edited maven pom.xml